--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <p1>Hello git</p1>
+        <p1>Hello Git</p1>
         <button onsubmit="">Submit</button>
 
     </body>
