update commit css.css & index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Git</title>
         <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="css.css" />
     </head>
 
     <body>
@@ -15,7 +16,10 @@
 
 
 <!--  
-        Store (Dang lam viec) ------------ Staging Area ----------------commit action--------------Git
-            index.html
+            git restore <file>        git restore --staged <file>
+        Store (Dang lam viec) ------------ Staged Area ----------------commit action--------------Git
+            index.html                                                       
+                                            css.css
+                                                                           index.css      
 
  -->
